--- a/package.json
+++ b/package.json
@@ -6,6 +6,13 @@
   "directories": {
     "test": "test"
   },
+  "engines": {
+    "node": "v6.9.1",
+    "npm": "4.1.2"
+  },
+  "scripts": {
+    "postinstall": "./node_modules/.bin/webpack"
+  },
   "dependencies": {
     "babel-core": "^6.24.1",
     "babel-loader": "^7.0.0",
